WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218806
[GPUProcess] Seamlessly resume WebAudio playback if the GPU Process crashes
https://bugs.webkit.org/show_bug.cgi?id=218806
Summary
[GPUProcess] Seamlessly resume WebAudio playback if the GPU Process crashes
Chris Dumez
Reported
2020-11-11 09:12:23 PST
If the GPU Process crashes during WebAudio playback, the GPU Process should get relaunched and WebAudio playback should seamlessly continue.
Attachments
Patch
(15.61 KB, patch)
2020-11-11 09:16 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(16.74 KB, patch)
2020-11-11 10:19 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(17.15 KB, patch)
2020-11-11 10:33 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-11-11 09:16:35 PST
Created
attachment 413827
[details]
Patch
Chris Dumez
Comment 2
2020-11-11 10:19:42 PST
Created
attachment 413836
[details]
Patch
Chris Dumez
Comment 3
2020-11-11 10:33:33 PST
Created
attachment 413838
[details]
Patch
Peng Liu
Comment 4
2020-11-11 11:15:17 PST
Comment on
attachment 413838
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=413838&action=review
> Source/WebKit/ChangeLog:12 > + audio rendering will seamlessly continue.
Very nice!
Geoffrey Garen
Comment 5
2020-11-11 11:49:28 PST
Comment on
attachment 413838
[details]
Patch r=me
EWS
Comment 6
2020-11-11 12:17:15 PST
Committed
r269698
: <
https://trac.webkit.org/changeset/269698
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 413838
[details]
.
Radar WebKit Bug Importer
Comment 7
2020-11-11 12:18:18 PST
<
rdar://problem/71293817
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug