[GPUProcess] Seamlessly resume WebAudio playback if the GPU Process crashes https://bugs.webkit.org/show_bug.cgi?id=218806

Reviewed by Geoffrey Garen.

Source/WebCore:

* platform/audio/cocoa/AudioDestinationCocoa.h:
Export function so it can be called from WebKit layer.

Source/WebKit:

In case of a GPU process crash, we were previously terminating all WebProcesses.
This patch makes it so that WebProcesses are no longer terminated in such cases.
Additionally, this patch makes sure that if WebAudio is rendering audio while
the GPU Process crashes, the GPU process will get relaunched right away and
audio rendering will seamlessly continue.

* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::gpuProcessCrashed):
* WebProcess/GPU/GPUProcessConnection.cpp:
(WebKit::GPUProcessConnection::didClose):
* WebProcess/GPU/GPUProcessConnection.h:
(WebKit::GPUProcessConnection::Client::gpuProcessConnectionDidClose):
(WebKit::GPUProcessConnection::addClient):
(WebKit::GPUProcessConnection::removeClient):
* WebProcess/GPU/media/RemoteAudioDestinationProxy.cpp:
(WebKit::RemoteAudioDestinationProxy::RemoteAudioDestinationProxy):
(WebKit::RemoteAudioDestinationProxy::connectToGPUProcess):
(WebKit::RemoteAudioDestinationProxy::gpuProcessConnectionDidClose):
* WebProcess/GPU/media/RemoteAudioDestinationProxy.h:
* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::gpuProcessConnectionClosed):
* WebProcess/WebProcess.h:

Tools:

Extend API test coverage.

* TestWebKitAPI/Tests/WebKitCocoa/GPUProcess.mm:
(TEST):


Canonical link: https://commits.webkit.org/231477@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269698 268f45cc-cd09-0410-ab3c-d52691b4dbfc