Source/WebKit/WebProcess/GPU/media/RemoteAudioDestinationProxy.h
@@ -28,6 +28,7 @@
 #if ENABLE(GPU_PROCESS) && ENABLE(WEB_AUDIO)
 
 #include "Connection.h"
+#include "GPUProcessConnection.h"
 #include "RemoteAudioDestinationIdentifier.h"
 #include "WebProcessSupplement.h"
 #include <WebCore/AudioIOCallback.h>
@@ -56,6 +57,7 @@ class RemoteAudioDestinationProxy
 #else
     : public WebCore::AudioDestination
 #endif
+    , public GPUProcessConnection::Client
     , public IPC::Connection::ThreadMessageReceiver {
     WTF_MAKE_NONCOPYABLE(RemoteAudioDestinationProxy);
 public:
@@ -78,11 +80,17 @@ private:
     void start(Function<void(Function<void()>&&)>&& dispatchToRenderThread, CompletionHandler<void(bool)>&&) final;
     void stop(CompletionHandler<void(bool)>&&) final;
 
+    void connectToGPUProcess();
+
+    // GPUProcessConnection::Client.
+    void gpuProcessConnectionDidClose(GPUProcessConnection&) final;
+
 #if !PLATFORM(COCOA)
     bool isPlaying() final { return false; }
     void setIsPlaying(bool) { }
     float sampleRate() const final { return 0; }
     unsigned framesPerBuffer() const final { return 0; }
+    unsigned numberOfOutputChannels() const { return m_numberOfOutputChannels; }
 #endif
 
 #if PLATFORM(COCOA)
@@ -104,7 +112,12 @@ private:
     std::unique_ptr<WebCore::CARingBuffer> m_ringBuffer;
     std::unique_ptr<WebCore::WebAudioBufferList> m_audioBufferList;
     uint64_t m_currentFrame { 0 };
+#else
+    unsigned m_numberOfOutputChannels;
 #endif
+
+    String m_inputDeviceId;
+    unsigned m_numberOfInputChannels;
 
     Function<void(Function<void()>&&)> m_dispatchToRenderThread;
     RefPtr<Thread> m_renderThread;
