Source/WebKit/WebProcess/WebProcess.h
@@ -225,7 +225,7 @@ public:
 
 #if ENABLE(GPU_PROCESS)
     GPUProcessConnection& ensureGPUProcessConnection();
-    void gpuProcessConnectionClosed(GPUProcessConnection*);
+    void gpuProcessConnectionClosed(GPUProcessConnection&);
     GPUProcessConnection* existingGPUProcessConnection() { return m_gpuProcessConnection.get(); }
 
 #if PLATFORM(COCOA) && USE(LIBWEBRTC)
